# Multi-Vendor-E-Commerce

./: .gitignore  README.md
admin/: package.json
backend/: README.md  main.py  pyproject.toml  requirements.txt  template.env
backend/app/auth/signup/: signup_routes.py  signup_service.py  user_model.py  user_schema.py
backend/app/core/: db_connection.py  env_loading.py
backend/app/models/: model_initilizer.py
user/: .prettierrc  next.config.ts  package.json  tailwind.config.ts
user/app/: globals.css  layout.tsx  page.tsx
user/app/(auth)/login/: page.tsx
user/app/(auth)/register/: page.tsx
user/app/(rules)/toc/: page.tsx
user/components/: AppIcon.tsx  AppLogo.tsx
user/components/layouts/: Navbar.tsx  SubNavbar.tsx
user/components/ui/: button.tsx  command.tsx  dialog.tsx  separator.tsx
